# gstreamer

./: README.md
gst-gzdec/: README.md  build-test-run-readme.sh  meson.build
gst-gzdec/gst-plugin/: AUTHORS  meson.build
gst-gzdec/gst-plugin/src/: gstgzdec.c  gstgzdec.h  main  main.c  run-readme.sh
